# gottong-core

./: CMakeLists.txt
include/: Gottong.hpp
include/gottong/: Audio.hpp  Font.hpp  Game.hpp  GameContext.hpp  GameObject.hpp  Image.hpp  Keyboard.hpp  Mouse.hpp  Resource.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Types.hpp
src/: Game.cc  Game.hpp  GameContext.cc  GameContext.hpp  Gottong.cc  Gottong.hpp  Image.cc  Image.hpp  Resource.cc  Sprite.cc  Sprite.hpp  WindowManager.cc  WindowManager.hpp  common.hpp
